# advent_of_code2021

./: Cargo.toml  README.md
assets/: test.txt
src/: assets.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  main.rs
